# viz

./: .gitignore  CMakeLists.txt  README.md  viz.py
cmake/: VIZConfig.cmake  VIZTargets-release.cmake  VIZTargets.cmake
examples/: CMakeLists.txt  example.cpp
examples/cmake_modules/: FindEigen.cmake  FindVIZ.cmake
include/viz/: geometry.h  viz.h
src/: CMakeLists.txt  geometry.h  viz.cpp  viz.h
src/viz/: viz.cpp
